--- a/Tyuiu.KomarovNA.Sprint1.Task0.V0.Test/Tyuiu.KomarovNA.Sprint1.Task0.V13.Test.csproj
+++ b/Tyuiu.KomarovNA.Sprint1.Task0.V0.Test/Tyuiu.KomarovNA.Sprint1.Task0.V13.Test.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Tyuiu.KomarovNA.Sprint1.Task0.V0.Lib\Tyuiu.KomarovNA.Sprint1.Task0.V0.Lib.csproj" />
+    <ProjectReference Include="..\Tyuiu.KomarovNA.Sprint1.Task0.V0.Lib\Tyuiu.KomarovNA.Sprint1.Task0.V13.Lib.csproj" />
   </ItemGroup>
 
   <ItemGroup>
