--- a/Tyuiu.KomarovNA.Sprint1.Task0.V13.Test/Tyuiu.KomarovNA.Sprint1.Task0.V13.Test.csproj
+++ b/Tyuiu.KomarovNA.Sprint1.Task0.V13.Test/Tyuiu.KomarovNA.Sprint1.Task0.V13.Test.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -18,6 +18,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Tyuiu.KomarovNA.Sprint1.Task0.V13.Lib\Tyuiu.KomarovNA.Sprint1.Task0.V13.Lib.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="tyuiu.cources.programming.interfaces">
+      <HintPath>..\tyuiu.cources.programming.interfaces.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
   <ItemGroup>
